@@ -3,3 +3,4 @@
 - eporner - fix listing
 - rule34video - fix listing
 - pornxp - search option
+- speedporn - fix listing
